--- a/navbar.html
+++ b/navbar.html
@@ -9,10 +9,10 @@
     <nav>
         <ul>
             <li><a href="https://www.wildcodeschool.com/fr-FR"><img src="images/logo_wcs.png" alt="LogoWild" id="logo"></a></li>
-            <li><a href="#">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="#">Journée type</a></li>
             <li><a href="#">Bien se préparer</a></li>
-            <li><a href="#">Cursus</a></li>
+            <li><a href="cursus.html">Cursus</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
