--- a/cursus.html
+++ b/cursus.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="banniere.css">
+    <link rel="stylesheet" href="navbar.css">
     <title>Cursus</title>
     <nav>
         <ul>
@@ -19,7 +21,11 @@
     </nav>
 </head>
 <body>
-    <div class="banniere">BANNIERE</div>
+    <div class="body">
+
+    <div class="banniere">
+        <img src="images/image_banniere.png" alt="Bannière" id="banniere">
+    </div>
     <div class="articleDiv">
         <div id="flex-container1">
             <article class="articleCursus">Langages travaillés : <br/>
@@ -61,6 +67,7 @@
             </article>
         </div>
     </div>
+</div>
     <footer>Vous pouvez nous retrouver ici :
         <div class="flex-container">
             <div>Wilder :<br/>Fatima <br/>Gio <br/> Kevin <br/> Thomas</div>
