--- a/navbar.html
+++ b/navbar.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="navbar.css">
     <title>Navbar</title>
     <nav>
-        <ul>
-            <li><a href="https://www.wildcodeschool.com/fr-FR"><img src="images/logo_wcs.png" alt="LogoWild" id="logo"></a></li>
-            <li><a href="index.html">Accueil</a></li>
-            <li><a href="#">Journée type</a></li>
-            <li><a href="#">Bien se préparer</a></li>
-            <li><a href="cursus.html">Cursus</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
+        <nav class = sidebar>
+            <ul>
+                <li><a href="https://www.wildcodeschool.com/fr-FR"><img src="images/logo_wcs.png" alt="LogoWild" id="logo"></a></li>
+                <li><a href="#">ACCUEIL</a></li>
+                <li><a href="#">JOURNEE TYPE</a></li>
+                <li><a href="#">BIEN SE PREPARER</a></li>
+                <li><a href="#">CURSUS</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </nav>
 </head>
 <body>
 </body>
