New link in navbar

--- a/cursus.html
+++ b/cursus.html
@@ -13,7 +13,7 @@
             <li><a href="#">ACCUEIL</a></li>
             <li><a href="#">JOURNEE TYPE</a></li>
             <li><a href="#">BIEN SE PREPARER</a></li>
-            <li><a href="#">CURSUS</a></li>
+            <li><a href="cursus.html">CURSUS</a></li>
             <li><a href="#">CONTACT</a></li>
         </ul>
     </nav>
