--- a/cursus.html
+++ b/cursus.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cursus.css">
+    <link rel="stylesheet" href="navBan.css">
     <title>Journée Type à la Wild</title>
     <nav class = sidebar>
         <ul>
