--- a/navbar.html
+++ b/navbar.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Journée Type à la Wild</title>
-    <nav class = sidebar>
-        <ul>
-            <li><a href="https://www.wildcodeschool.com/fr-FR"><img src="images/logo_wcs.png" alt="LogoWild" id="logo"></a></li>
-            <li><a href="#">ACCUEIL</a></li>
-            <li><a href="#">JOURNEE TYPE</a></li>
-            <li><a href="#">BIEN SE PREPARER</a></li>
-            <li><a href="#">CURSUS</a></li>
-            <li><a href="#">CONTACT</a></li>
-        </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Semaine Type à la Wild</title>
+    <nav class="sidebar">
+      <ul>
+        <li>
+          <a href="https://www.wildcodeschool.com/fr-FR"
+            ><img src="images/logo_wcs.png" alt="LogoWild" id="logo"
+          /></a>
+        </li>
+        <li><a href="#">ACCUEIL</a></li>
+        <li><a href="#">SEMAINE TYPE</a></li>
+        <li><a href="#">BIEN SE PREPARER</a></li>
+        <li><a href="#">CURSUS</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
     </nav>
-</head>
-<body>
-    <div class="body">
-        <div class="banniere">
-            <img src="images/image_banniere.png" alt="Bannière" id="banniere">
-        </div>
-        <h1>test</h1>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quod voluptas qui voluptatum, voluptate esse vitae alias assumenda saepe quo! 
-        Dolorum nisi iusto dolores labore numquam dignissimos similique, maxime magnam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quod voluptas qui voluptatum, voluptate esse vitae alias assumenda saepe quo! 
-        Dolorum nisi iusto dolores labore numquam dignissimos similique, maxime magnam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quod voluptas qui voluptatum, voluptate esse vitae alias assumenda saepe quo! 
-        Dolorum nisi iusto dolores labore numquam dignissimos similique, maxime magnam.</p>
+    <div class="container-main">
+      <div class="banniere">
+        <img src="images/image_banniere.png" alt="Bannière" id="banniere-img" />
+      </div>
+      <div class="main-title">
+        <h1>Titre principal</h1>
+      </div>
+  </head>
+  <body>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quod
+          voluptas qui voluptatum, voluptate esse vitae alias assumenda saepe quo!
+          Dolorum nisi iusto dolores labore numquam dignissimos similique, maxime
+          magnam.
+        </p>
     </div>
-</body>
+  </body>
 </html>
