--- a/navbar.html
+++ b/navbar.html
@@ -8,12 +8,11 @@
     <title>Semaine Type à la Wild</title>
     <nav class="sidebar">
       <ul>
-          <li><a href="#">ACCUEIL</a></li>
-          <li><a href="#">SEMAINE TYPE</a></li>
-          <li><a href="#">BIEN SE PREPARER</a></li>
-          <li><a href="#">CURSUS</a></li>
-          <li><a href="#">CONTACT</a></li>
-          <li>
+        <li><a href="index.html">ACCUEIL</a></li>
+        <li><a href="semaine-type.html">SEMAINE TYPE</a></li>
+        <li><a href="bien_se_preparer.html">BIEN SE PREPARER</a></li>
+        <li><a href="cursus.html">CURSUS</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
             <a href="https://www.wildcodeschool.com/fr-FR"
               ><img src="images/logo_wcs.png" alt="LogoWild" id="logo"
             /></a>
