--- a/cursus.html
+++ b/cursus.html
@@ -64,7 +64,7 @@
                     Semaine 20 : Final Checkpoint (React + Node) + Livraison Projet Client  <br/>
                 </article>
             </div>
-            <article class="footer">Vous pouvez nous retrouver ici :
+            <footer class="footer">Vous pouvez nous retrouver ici :
                 <div class="flex-container">
                     <div>Wilder :<br/>Fatima <br/>Gio <br/> Kevin <br/> Thomas</div>
                     <div>Email :<br/>aitkhelifa.fatima59@gmail.com <br/>giovanni.rossi.web@gmail.com <br/> kevinbruno90@gmail.com <br/> thomasfran1935@gmail.com</div>
