Banniere / logo & title edit.

--- a/cursus.html
+++ b/cursus.html
@@ -7,23 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cursus.css">
     <link rel="stylesheet" href="navBan.css">
-    <title>Journée Type à la Wild</title>
-    <nav class = sidebar>
+    <title>Cursus</title>
+    <nav class="sidebar">
         <ul>
-            <li><a href="https://www.wildcodeschool.com/fr-FR"><img src="images/logo_wcs.png" alt="LogoWild" id="logo"></a></li>
-            <li><a href="#">ACCUEIL</a></li>
-            <li><a href="#">JOURNEE TYPE</a></li>
-            <li><a href="#">BIEN SE PREPARER</a></li>
-            <li><a href="cursus.html">CURSUS</a></li>
-            <li><a href="#">CONTACT</a></li>
+          <li><a href="index.html">ACCUEIL</a></li>
+          <li><a href="semaine-type.html">SEMAINE TYPE</a></li>
+          <li><a href="bien_se_preparer.html">BIEN SE PREPARER</a></li>
+          <li><a href="cursus.html">CURSUS</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+              <a href="https://www.wildcodeschool.com/fr-FR"
+                ><img src="images/logo_wcs.png" alt="LogoWild" id="logo"
+              /></a>
+            </li>
         </ul>
-    </nav>
+      </nav>
 </head>
 <body>
     <div class="body">
         <div class="banniere">
-            <img src="images/image_banniere.png" alt="Bannière" id="banniere">
-        </div>
+            <img src="images/image_banniere.png" alt="Bannière" id="banniere-img" />
+          </div>
+          <div class="main-title">
+            <h1>Que faisons-nous à la Wild Code School ?</h1>
+          </div>
         <div class="articleDiv">
             <div id="flex-container1">
                 <article class="articleCursus">Langages travaillés : <br/>
