Initial commit of prod branch

--- a/bien_se_preparer.html
+++ b/bien_se_preparer.html
@@ -5,8 +5,7 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <link rel="stylesheet" href="prototype.css">
-     <link rel="stylesheet" href="index.css">
-     <title>Accueil</title>
+     <title>Semaine Type à la Wild</title>
      <nav class="sidebar">
          <ul>
              <li><a href="index.html">ACCUEIL</a></li>
@@ -26,17 +25,20 @@
              <img src="images/image_banniere.png" alt="Bannière" id="banniere-img" />
          </div>
          <div class="main-title">
-             <h1>Bienvenue à la wild</h1>
+             <h1>Comment préparer sa formation ?</h1>
          </div>
          <body>
              <div class="container-main-body">
-                 <div class="articles">
-                    <div class="divArticle"><center><h4>Qui sommes-nous ?</h4></center> <br/>
-                        <p>Bla bla</p></div>
-                    <div class="divArticle"><center><h4>Pourquoi avons-nous fait ce site ?</h4></center> <br/>
-                        <p>Bla bla</p></div>
-                    <div class="divArticle"><center><h4>Pourquoi choisir le remote ?</h3></center> <br/>
-                        <p>Bla bla</p></div>
+                <div>
+                    <div> <center>Pour commencer votre formation, il vous faudra : </center><br/>
+                    <ul>
+                        <li>Un ordinateur</li>
+                        <li>Un ou plusieurs écrans</li>
+                        <li>Installer Ubuntu (vous pouvez utiliser un mac à la place, ou windows pour les courageux)</li>
+                        <li>Installer VSCode</li>
+                        <li>Se familiariser au HTML et CSS</li>
+                    </ul> <br/>
+                    Voici quelques liens utiles : <a href="https://cssgridgarden.com/">GridGarden</a> | <a href="https://flexboxfroggy.com/">Froggy</a></div>
                  </div>
              </div>
          </body>
