--- a/semaine-type.html
+++ b/semaine-type.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8" />
      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <link rel="stylesheet" href="style.css" />
+     <link rel="stylesheet" href="prototype.css">
      <title>Semaine Type à la Wild</title>
      <nav class="sidebar">
          <ul>
@@ -25,7 +25,7 @@
              <img src="images/image_banniere.png" alt="Bannière" id="banniere-img" />
          </div>
          <div class="main-title">
-             <h1>Titre principal</h1>
+             <h1>Comment se déroule une semaine à la Wild ?</h1>
          </div>
          <body>
              <div class="container-main-body">
