mis en ligne du projet index avec début de mise en page

--- a/index.html
+++ b/index.html
@@ -1,23 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Accueil</title>
-    <nav>
-        <ul>
-            <li><a href="https://www.wildcodeschool.com/fr-FR"><img src="images/logo_wcs.png" alt="LogoWild" id="logo"></a></li>
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#">Journée type</a></li>
-            <li><a href="#">Bien se préparer</a></li>
-            <li><a href="#">Cursus</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Accueil</title>
 </head>
+
 <body>
-    <h1>test</h1>
+  <nav class="sidebar">
+    <ul>
+      <li><a href="index.html">ACCUEIL</a></li>
+      <li><a href="semaine-type.html">SEMAINE TYPE</a></li>
+      <li><a href="bien_se_preparer.html">BIEN SE PREPARER</a></li>
+      <li><a href="cursus.html">CURSUS</a></li>
+      <li><a href="contact.html">CONTACT</a></li>
+      <a href="https://www.wildcodeschool.com/fr-FR"><img src="images/logo_wcs.png" alt="LogoWild" id="logo" /></a>
+      </li>
+    </ul>
+  </nav>
+  <div class="container-main">
+    <div class="banniere">
+      <img src="images/image_banniere.png" alt="Bannière" id="banniere-img" />
+    </div>
+
+    <div class="main-title">
+
+      <h1 class="h1index">WELCOME</h1>
+      <h1 class="h1-second-index">REJOINS NOUS</h1>
+
+    </div>
+    <section class="index-section-articles">
+       
+      <article class="quisommesnous">
+        <img src="images/image-remote.jpg" class="image-remote">
+        <h2 class="h2index"> Qui sommes nous ?</h2>
+        <p class="text-index"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea vel dicta, dolore aspernatur
+          explicabo deleniti, quas unde nihil, fuga et voluptate modi laborum quae dolor consequatur optio odit impedit
+          mollitia?</p>
+      </article>
+
+      <article class="pourquoi">
+        <img src="images/wild-ecole-image.jpeg" class="image-remote">
+        <h2 class="h2index">Pourquoi rejoindre la wildcodeschool ?</h2>
+        <p class="text-index">
+          La WILDCODESCHOOL c'est : <br />
+          - plus de 2000 anciens élèves,<br />
+          - 3 spécialités (développement web, analyse de la data, cybersécurité)<br />
+          - +20 campus en Europe<br />
+          - un taux de 84% d’insertion professionnelle.<br />
+          <br /><br />
+          À la WILDCODESCHOOL, tu te retrouveras d'abord face aux problèmes et on t'expliquera ensuite la solution. Un
+          peu comme une sorte d'escape Game éducatif, pas mal non ? <br /><br />
+          L'objectif est de te familiariser rapidement avec le langage choisi et de trouver par toi même la solution au
+          problème. La montée en compétence se fera au gré des quêtes.<br /><br />
+          Les cours sont interactifs. Live codding et workshop te permettront de découvrir pas à pas le langage et
+          d'apprendre en pratiquant.
+
+
+
+        </p>
+      </article>
+
+      <article class="remote">
+        <h2 class="h2index">Apprendre à développer en remote, <br /> c'est possible ?</h2>
+        <p class="text-index"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea vel dicta, dolore aspernatur
+          explicabo deleniti, quas unde nihil, fuga et voluptate modi laborum quae dolor consequatur optio odit impedit
+          mollitia?</p>
+      </article>
+
+    </section>
+
+    <footer class="footer">Vous pouvez nous retrouver ici :
+      <div class="flex-container">
+        <div>Wilder :<br />Fatima <br />Gio <br /> Kevin <br /> Thomas</div>
+        <div>Email :<br />aitkhelifa.fatima59@gmail.com <br />giovanni.rossi.web@gmail.com <br /> kevinbruno90@gmail.com
+          <br /> thomasfran1935@gmail.com</div>
+        <div>Github :<br />https://github.com/fatimaatk <br />https://github.com/eths09 <br />
+          https://github.com/OlidaKelly <br /> https://github.com/ThomasFr45</div>
+        <div>LinkedIn :<br />? <br />? <br /> ? <br /> ?</div>
+      </div>
 </body>
+
 </html>
