Many edits about CSS and some JS tests

--- a/contact.html
+++ b/contact.html
@@ -41,57 +41,57 @@
              </div>
          </body>
          <footer>
-             <p>
-              Les wilders ayant participer à ce projet :
-             </p>
-             <div class="container-footer">
-                 <div class="wilder-reseaux">
-                      <p>
-                        <img src="icones/fatima-img.png" alt="Photo de Fatima" class="icone"/>
-                         <a href="https://aitkhelifa.fatima59@gmail.com">
-                         <img src="icones/logo-mail.png" alt="Icone Mail" class="icone"/></a>                         
-                         <a href="https://github.com/fatimaatk">
-                         <img src="icones/logo-github.png" alt="Icone Github" class="icone"/></a>                        
-                         <a href="https://www.linkedin.com/in/fatima-ait-khelifa-4ab840215/">
-                         <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone"/></a>
-                      </p>
-                 </div>
-                 <div class="wilder-reseaux">
-                      <p>
-                         <img src="icones/gio-img.png" alt="Photo de giovanni" class="icone"/>
-                         <a href="https://giovanni.rossi.web@gmail.com">
-                         <img src="icones/logo-mail.png" alt="Icone Mail" class="icone"/></a>
-                         <a href="https://github.com/eths09">
-                         <img src="icones/logo-github.png" alt="Icone Github" class="icone"/></a>
-                         <a href="https://www.linkedin.com/in/">
-                         <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone"/></a>
-                      </p>
+            <p>
+             Les wilders ayant participer à ce projet :
+            </p>
+            <div class="container-footer">
+                <div class="wilder-reseaux">
+                     <p>
+                       <img src="icones/fatima-img.png" alt="Photo de Fatima" class="icone"/>
+                        <a href="https://aitkhelifa.fatima59@gmail.com" target="_blank">
+                        <img src="icones/logo-mail.png" alt="Icone Mail" class="icone"/></a>                         
+                        <a href="https://github.com/fatimaatk" target="_blank">
+                        <img src="icones/logo-github.png" alt="Icone Github" class="icone"/></a>                        
+                        <a href="https://www.linkedin.com/in/fatima-ait-khelifa-4ab840215/" target="_blank">
+                        <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone"/></a>
+                     </p>
+                </div>
+                <div class="wilder-reseaux">
+                     <p>
+                        <img src="icones/gio-img.png" alt="Photo de giovanni" class="icone"/>
+                        <a href="https://giovanni.rossi.web@gmail.com" target="_blank">
+                        <img src="icones/logo-mail.png" alt="Icone Mail" class="icone"/></a>
+                        <a href="https://github.com/eths09" target="_blank">
+                        <img src="icones/logo-github.png" alt="Icone Github" class="icone"/></a>
+                        <a href="https://www.linkedin.com/in/gio-rossi-4b0b98221/" target="_blank">
+                        <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone"/></a>
+                     </p>
 
-                 </div>
-                 <div class="wilder-reseaux">
-                      <p>
-                         <img src="icones/thomas-img.png" alt="Photo de Thomas" class="icone"/>
-                         <a href="https://thomasfran1935@gmail.com">
-                         <img src="icones/logo-mail.png" alt="Icone Mail" class="icone"/></a>
-                         <a href="https://github.com/ThomasFr45">
-                         <img src="icones/logo-github.png" alt="Icone Github" class="icone"/></a>
-                         <a href="https://www.linkedin.com/in/">
-                         <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone"/></a>
-                      </p>
-                 </div>
-                 <div class="wilder-reseaux">
-                      <p>
-                         <img src="icones/kevin-img.png" alt="Photo de Kévin" class="icone"/>
-                         <a href="https://kevinbruno90@gmail.com">
-                         <img src="icones/logo-mail.png" alt="Icone Mail" class="icone"/></a>
-                         <a href="https://https://github.com/KvnBrn">
-                         <img src="icones/logo-github.png" alt="Icone Github" class="icone"/></a>
-                         <a href="https://www.linkedin.com/in/kevin-bruno-983a6417b/">
-                         <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone"/></a>
-                      </p>
-                 </div>
-             </div>
-         </footer>
+                </div>
+                <div class="wilder-reseaux">
+                     <p>
+                        <img src="icones/thomas-img.png" alt="Photo de Thomas" class="icone"/>
+                        <a href="https://thomasfran1935@gmail.com" target="_blank">
+                        <img src="icones/logo-mail.png" alt="Icone Mail" class="icone"/></a>
+                        <a href="https://github.com/ThomasFr45" target="_blank">
+                        <img src="icones/logo-github.png" alt="Icone Github" class="icone"/></a>
+                        <a href="https://www.linkedin.com/in/thomas-fran%C3%A7ois-bba91a221/" target="_blank">
+                        <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone"/></a>
+                     </p>
+                </div>
+                <div class="wilder-reseaux">
+                     <p>
+                        <img src="icones/kevin-img.png" alt="Photo de Kévin" class="icone"/>
+                        <a href="https://kevinbruno90@gmail.com" target="_blank">
+                        <img src="icones/logo-mail.png" alt="Icone Mail" class="icone"/></a>
+                        <a href="https://https://github.com/KvnBrn" target="_blank">
+                        <img src="icones/logo-github.png" alt="Icone Github" class="icone"/></a>
+                        <a href="https://www.linkedin.com/in/kevin-bruno-983a6417b/ " target="_blank">
+                        <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone"/></a>
+                     </p>
+                </div>
+            </div>
+        </footer>
       </div>
       <script src="contact.js"></script>
 </html>
