mis à jour projet branche Fatima - modification du footer & ajout texte projet

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-index.css">
   <title>Accueil</title>
 </head>
 
@@ -33,23 +33,33 @@
 
     </div>
     <section class="index-section-articles">
-       
+
       <article class="quisommesnous">
-        <img src="images/image-remote.jpg" class="image-remote">
+        <img src="images/image_quisommesnous.jpg" class="image-remote">
         <h2 class="h2index"> Qui sommes nous ?</h2>
-        <p class="text-index"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea vel dicta, dolore aspernatur
-          explicabo deleniti, quas unde nihil, fuga et voluptate modi laborum quae dolor consequatur optio odit impedit
-          mollitia?</p>
+        <p class="text-index">
+          Nous sommes quatre étudiants en formation </br> Developpeur Web et Web Mobile à la wildcodeschool.</br>
+          Notre team est composée de profils très différents mais tout aussi complémentaires. </br> </br>
+          Kevin vient d'Amiens et est
+          diplomé d'une licence en Banque et Assurance. Il a travaillé dans le domaine </br> de la banque pendant 8 ans.
+          </br></br>
+          Fatima, elle, est Lilloise. Elle est diplomée d'une licence en Management et a
+          travaillé pendant plusieurs années dans le domaine du réseau et des télécommunications. </br> </br> (giovanni
+          </br> </br> + thomas)
+          </br></br>
+          Que ce soit dans le cadre d'une reconversion professionnelle ou bien d'une continuité d'études, nous avons
+          tous les quatres fait le choix d'intégrer l'école de la WILDCODESCHOOL.
+        </p>
       </article>
 
       <article class="pourquoi">
         <img src="images/wild-ecole-image.jpeg" class="image-remote">
         <h2 class="h2index">Pourquoi rejoindre la wildcodeschool ?</h2>
         <p class="text-index">
-          La WILDCODESCHOOL c'est : <br />
-          - plus de 2000 anciens élèves,<br />
-          - 3 spécialités (développement web, analyse de la data, cybersécurité)<br />
-          - +20 campus en Europe<br />
+          La WILDCODESCHOOL c'est : <br /><br />
+          - plus de 2000 anciens élèves,<br /><br />
+          - 3 spécialités (développement web, analyse de la data, cybersécurité)<br /><br />
+          - + 20 campus en Europe<br /><br />
           - un taux de 84% d’insertion professionnelle.<br />
           <br /><br />
           À la WILDCODESCHOOL, tu te retrouveras d'abord face aux problèmes et on t'expliquera ensuite la solution. Un
@@ -65,23 +75,93 @@
       </article>
 
       <article class="remote">
-        <h2 class="h2index">Apprendre à développer en remote, <br /> c'est possible ?</h2>
-        <p class="text-index"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea vel dicta, dolore aspernatur
-          explicabo deleniti, quas unde nihil, fuga et voluptate modi laborum quae dolor consequatur optio odit impedit
-          mollitia?</p>
+        <img src="images/image_remote.jpg" class="image-remote">
+        <h2 class="h2index">Apprendre à développer en remote, c'est possible ?</h2>
+        <p class="text-index">
+          La réponse est OUI.
+          </br></br> Pour cette rentrée, notre promotion est constituée de 60 élèves venus de toute la France et meme
+          d'ailleurs. </br>Londres, Bruxelles et même Madagascar ont rejoint la session de Developpeur Web et Web Mobile
+          en remote.
+          </br></br>
+          Nous avons été divisés en quatre groupes afin de nous former sur le langage choisi : Javascript ou bien
+          PHP.</br> </br>
+          A l'ere de l'ultra-digitalisation, nous travaillons ensemble et intéragissons avec des outils en ligne.
+          </br></br>Des meet-up sont organisés chaque matin afin de nous permettre d'échanger sur l'avancée de notre
+          formation. </br></br> La journée quant à elle, est rythmée par des cours communs en visio.</br></br> Nous
+          montons chaque jour en compétence ensemble. Si tu veux en savoir plus, n'hésite pas à visiter </br>notre page
+          dédiée sur le sujet : </br>une semaine type dans la peau d'un wilder en Remote.
+
+        </p>
       </article>
 
     </section>
 
-    <footer class="footer">Vous pouvez nous retrouver ici :
-      <div class="flex-container">
-        <div>Wilder :<br />Fatima <br />Gio <br /> Kevin <br /> Thomas</div>
-        <div>Email :<br />aitkhelifa.fatima59@gmail.com <br />giovanni.rossi.web@gmail.com <br /> kevinbruno90@gmail.com
-          <br /> thomasfran1935@gmail.com</div>
-        <div>Github :<br />https://github.com/fatimaatk <br />https://github.com/eths09 <br />
-          https://github.com/OlidaKelly <br /> https://github.com/ThomasFr45</div>
-        <div>LinkedIn :<br />? <br />? <br /> ? <br /> ?</div>
+    <footer>
+
+
+      <div class="container-footer">
+        <div class="wilder-reseaux">
+          <a href="https://aitkhelifa.fatima59@gmail.com">
+            <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
+          <a href="https://github.com/fatimaatk">
+            <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
+          <a href="https://www.linkedin.com/in/fatima-ait-khelifa-4ab840215/">
+            <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
+          <h4>FATIMA AIT KHELIFA </h4>
+
+        </div>
+        <div class="wilder-reseaux">
+
+          <!--
+                  <img src="icones/gio-img.png" alt="Photo de giovanni" class="icone"/>
+                 -->
+          <a href="https://giovanni.rossi.web@gmail.com">
+            <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
+          <a href="https://github.com/eths09">
+            <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
+          <a href="https://www.linkedin.com/in/">
+            <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
+          <h4> GIOVANNI ROSSI </h4>
+
+
+        </div>
+        <div class="wilder-reseaux">
+
+          <!--
+                  <img src="icones/thomas-img.png" alt="Photo de Thomas" class="icone"/>
+                -->
+          <a href="https://thomasfran1935@gmail.com">
+            <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
+          <a href="https://github.com/ThomasFr45">
+            <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
+          <a href="https://www.linkedin.com/in/">
+            <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
+          <h4>THOMAS FRANÇOIS</h4>
+
+        </div>
+        <div class="wilder-reseaux">
+
+          <!--
+            <img src="icones/kevin-img.png" alt="Photo de Kévin" class="icone" />
+            -->
+          <a href="https://kevinbruno90@gmail.com">
+            <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
+          <a href="https://https://github.com/KvnBrn">
+            <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
+          <a href="https://www.linkedin.com/in/kevin-bruno-983a6417b/">
+            <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
+          <h4>KEVIN BRUNO</h4>
+
+        </div>
       </div>
-</body>
+      <div class="texte-footer">
+        <p>Wilders ayant participé à l'élaboration de ce projet
+          </br></br>
+          Site internet crée dans le cadre d'un projet de la formation DEVELOPPEUR WEB et WEB MOBILE.
+          </br> </br>Tous droits réservés à la WILDCODESCHOOL.
+        </p>
+      </div>
+    </footer>
+  </div>
 
 </html>
