--- a/semaine-type.html
+++ b/semaine-type.html
@@ -5,6 +5,7 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <link rel="stylesheet" href="prototype.css">
+     <link rel="stylesheet" href="test.css">
      <title>Semaine Type à la Wild</title>
      <nav class="sidebar">
          <ul>
@@ -22,8 +23,14 @@
   </head>
      <div class="container-main">
          <div class="banniere">
-             <img src="images/image_banniere.png" alt="Bannière" id="banniere-img" />
+             <img src="images/image_banniere.png" alt="Bannière" id="banniere-img"/>
          </div>
+         <div id="myModal" class="modal">
+             <span class="close">&times;</span>
+             <img class="modal-content" id="img01">
+             <div id="caption"></div>
+           </div>
+           <script src="test.js"></script>
          <div class="main-title">
              <h1>Comment se déroule une semaine à la Wild ?</h1>
          </div>
