--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                     <form action="">
                         <div class="divInput"><input type="text"  class="texte" placeholder="Nom / Prénom" id="name"></div>
                         <div class="divInput"><input type="email"  class="texte" placeholder="Email" id="email"></div>
-                        <div class="divMessage"><textarea class="message" id="message">Message</textarea></div>
+                        <div class="divMessage"><textarea class="message" id="message"></textarea></div>
                         <div class="divbutton"><button type="button" class="button" id="sendButton">Envoyer</button></div>
                     </form>
                 </div>
