Tests about fun JS

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
      <link rel="stylesheet" href="contact.css">
      <title>Semaine Type à la Wild</title>
      <nav class="sidebar">
-         <ul>
+         <ul id="plopBar">
              <li><a href="index.html">ACCUEIL</a></li>
              <li><a href="semaine-type.html">SEMAINE TYPE</a></li>
              <li><a href="bien_se_preparer.html">BIEN SE PREPARER</a></li>
@@ -40,7 +40,7 @@
                 </div>
              </div>
          </body>
-         <footer>
+         <footer id="plopFooter">
             <p>
              Les wilders ayant participer à ce projet :
             </p>
