--- a/cursus.html
+++ b/cursus.html
@@ -37,27 +37,28 @@
                         Pendant votre formation, vous approfondirez vos connaissances en HTML et CSS, mais vous
                         apprendrez aussi les bases de JavaScript ainsi que PHP ! <br />
                         Après vos deux premières semaines, on vous demandera de choisir le langage avec lequel vous
-                        souhaitez continuer la formation, qu'allez vous choisir ?</article>
+                        souhaitez perfectionner au cours de la formation, qu'allez vous choisir ?</article>
                 </div>
                 <div id="flex-container2">
                     <article class="articleCursus">Workshops : <br />
-                        Au cours de la formation, différents ateliers seront mis en place afin de mettre en pratique ce
-                        qui à été vu lors des cours. <br />
-                        Ces derniers peuvent se dérouler seul ou en groupe. Notez qu'il est possible de les refaire à
-                        n'importe quel moment !</article>
+                        Au cours de la formation, différents ateliers seront mis en place, ces derniers peuvent se dérouler seul ou en groupe. <br/> 
+                        Ces ateliers vous permettront d'appliquer certaines notions vu lors des cours, mais aussi de vous familiariser avec certaines erreurs, afin de les éviter, ou de savoir les réparer. <br/> 
+                        Notez qu'il est possible de les refaire à n'importe quel moment !</article>
                 </div>
                 <div id="flex-container1">
                     <article class="articleCursus">Quêtes : <br />
                         Les quêtes représentent une grosse partie du cursus, vous en aurez des nouvelles toutes les
                         semaines. <br />
                         Ces dernières, vous permettront de voir certaines notions, et de les mettre en pratique (du
-                        moins essayer) avant le cours les concernants. Il est donc TRES important de les faire
+                        moins essayer) avant le cours les concernants. Certaines de ces quêtes auront une solution à rendre, vous serez alors corrigés par ves camarades. <br/> 
+                        Il est donc TRES important de les faire
                         sérieusement !</article>
                 </div>
                 <div id="flex-container2">
                     <article class="articleCursus">Projets : <br />
                         Entre vos cours, workshops et vos quêtes, on vous demandera de réaliser des projets. <br />
-                        Ces derniers se réaliseront en groupes, afin de vous permettre d'apprendre les un des autres.
+                        Ces derniers se réaliseront en groupes, afin de vous permettre d'apprendre les un des autres, et surtout de vous familiariser avec les outils de développeur. <br/>
+                        Vous devrez passer par différentes étapes : La création de maquettes (Figma peut être utile pour cela), la réalisation des parties communes à vos pages ( NavBar, banniere s'il y a, footer, ... ), et enfin le contenue de vos pages.
                         <br />
                         Il sera donc très important de bien s'organiser et discuter avec ses collègues.
                     </article>
