--- a/index.html
+++ b/index.html
@@ -31,12 +31,50 @@
          <body>
              <div class="container-main-body">
                  <div class="articles">
-                    <div class="divArticle"><center><h4>Qui sommes-nous ?</h4></center> <br/>
-                        <p>Bla bla</p></div>
-                    <div class="divArticle"><center><h4>Pourquoi avons-nous fait ce site ?</h4></center> <br/>
-                        <p>Bla bla</p></div>
-                    <div class="divArticle"><center><h4>Pourquoi choisir le remote ?</h3></center> <br/>
-                        <p>Bla bla</p></div>
+                    <div class="divArticle"><img src="images/image_quisommesnous.jpg" class="image-remote">
+                        <h2 class="h2index">Qui sommes-nous ?</h2> <br/>
+                        <p>          Nous sommes quatre étudiants en formation </br> Developpeur Web et Web Mobile à la wildcodeschool.</br>
+                            Notre team est composée de profils très différents mais tout aussi complémentaires. </br> </br>
+                            Kevin vient d'Amiens et est
+                            diplomé d'une licence en Banque et Assurance. Il a travaillé dans le domaine </br> de la banque pendant 8 ans.
+                            </br></br>
+                            Fatima, elle, est Lilloise. Elle est diplomée d'une licence en Management et a
+                            travaillé pendant plusieurs années dans le domaine du réseau et des télécommunications. </br> </br> (giovanni
+                            </br> </br> + thomas)
+                            </br></br>
+                            Que ce soit dans le cadre d'une reconversion professionnelle ou bien d'une continuité d'études, nous avons
+                            tous les quatres fait le choix d'intégrer l'école de la WILDCODESCHOOL.</p></div>
+                    <div class="divArticle"><img src="images/wild-ecole-image.jpeg" class="image-remote">
+                        <h2 class="h2index">Pourquoi rejoindre la wild ?</h2> <br/>
+                        <p>La WILDCODESCHOOL c'est : <br /><br />
+                            - plus de 2000 anciens élèves,<br /><br />
+                            - 3 spécialités (développement web, analyse de la data, cybersécurité)<br /><br />
+                            - + 20 campus en Europe<br /><br />
+                            - un taux de 84% d’insertion professionnelle.<br />
+                            <br /><br />
+                            À la WILDCODESCHOOL, tu te retrouveras d'abord face aux problèmes et on t'expliquera ensuite la solution. Un
+                            peu comme une sorte d'escape Game éducatif, pas mal non ? <br /><br />
+                            L'objectif est de te familiariser rapidement avec le langage choisi et de trouver par toi même la solution au
+                            problème. La montée en compétence se fera au gré des quêtes.<br /><br />
+                            Les cours sont interactifs. Live codding et workshop te permettront de découvrir pas à pas le langage et
+                            d'apprendre en pratiquant.
+                  
+                  
+                  </p></div>
+                    <div class="divArticle"><img src="images/image_remote.jpg" class="image-remote">
+                        <h2 class="h2index">Apprendre à développer en remote c'est possible ?</h2><br/>
+                        <p>          La réponse est OUI.
+                        </br></br> Pour cette rentrée, notre promotion est constituée de 60 élèves venus de toute la France et meme
+                        d'ailleurs. </br>Londres, Bruxelles et même Madagascar ont rejoint la session de Developpeur Web et Web Mobile
+                        en remote.
+                        </br></br>
+                        Nous avons été divisés en quatre groupes afin de nous former sur le langage choisi : Javascript ou bien
+                        PHP.</br> </br>
+                        A l'ere de l'ultra-digitalisation, nous travaillons ensemble et intéragissons avec des outils en ligne.
+                        </br></br>Des meet-up sont organisés chaque matin afin de nous permettre d'échanger sur l'avancée de notre
+                        formation. </br></br> La journée quant à elle, est rythmée par des cours communs en visio.</br></br> Nous
+                        montons chaque jour en compétence ensemble. Si tu veux en savoir plus, n'hésite pas à visiter </br>notre page
+                        dédiée sur le sujet : </br>une semaine type dans la peau d'un wilder en Remote.</p></div>
                  </div>
              </div>
          </body>
