--- a/cursus.html
+++ b/cursus.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="navBan.css" />
     <link rel="stylesheet" href="cursus.css">
+    <link rel="stylesheet" href="prototype.css">
     <title>Cursus</title>
     <nav class="sidebar">
         <ul>
@@ -37,27 +37,28 @@
                         Pendant votre formation, vous approfondirez vos connaissances en HTML et CSS, mais vous
                         apprendrez aussi les bases de JavaScript ainsi que PHP ! <br />
                         Après vos deux premières semaines, on vous demandera de choisir le langage avec lequel vous
-                        souhaitez continuer la formation, qu'allez vous choisir ?</article>
+                        souhaitez perfectionner au cours de la formation, qu'allez vous choisir ?</article>
                 </div>
                 <div id="flex-container2">
                     <article class="articleCursus">Workshops : <br />
-                        Au cours de la formation, différents ateliers seront mis en place afin de mettre en pratique ce
-                        qui à été vu lors des cours. <br />
-                        Ces derniers peuvent se dérouler seul ou en groupe. Notez qu'il est possible de les refaire à
-                        n'importe quel moment !</article>
+                        Au cours de la formation, différents ateliers seront mis en place, ces derniers peuvent se dérouler seul ou en groupe. <br/> 
+                        Ces ateliers vous permettront d'appliquer certaines notions vu lors des cours, mais aussi de vous familiariser avec certaines erreurs, afin de les éviter, ou de savoir les réparer. <br/> 
+                        Notez qu'il est possible de les refaire à n'importe quel moment !</article>
                 </div>
                 <div id="flex-container1">
                     <article class="articleCursus">Quêtes : <br />
                         Les quêtes représentent une grosse partie du cursus, vous en aurez des nouvelles toutes les
                         semaines. <br />
                         Ces dernières, vous permettront de voir certaines notions, et de les mettre en pratique (du
-                        moins essayer) avant le cours les concernants. Il est donc TRES important de les faire
+                        moins essayer) avant le cours les concernants. Certaines de ces quêtes auront une solution à rendre, vous serez alors corrigés par ves camarades. <br/> 
+                        Il est donc TRES important de les faire
                         sérieusement !</article>
                 </div>
                 <div id="flex-container2">
                     <article class="articleCursus">Projets : <br />
                         Entre vos cours, workshops et vos quêtes, on vous demandera de réaliser des projets. <br />
-                        Ces derniers se réaliseront en groupes, afin de vous permettre d'apprendre les un des autres.
+                        Ces derniers se réaliseront en groupes, afin de vous permettre d'apprendre les un des autres, et surtout de vous familiariser avec les outils de développeur. <br/>
+                        Vous devrez passer par différentes étapes : La création de maquettes (Figma peut être utile pour cela), la réalisation des parties communes à vos pages ( NavBar, banniere s'il y a, footer, ... ), et enfin le contenue de vos pages.
                         <br />
                         Il sera donc très important de bien s'organiser et discuter avec ses collègues.
                     </article>
@@ -85,57 +86,63 @@
         </div>
     </body>
     <footer>
-        <p>
-            Les wilders ayant participer à ce projet :
-        </p>
         <div class="container-footer">
             <div class="wilder-reseaux">
-                <p>
-                    <img src="icones/fatima-img.png" alt="Photo de Fatima" class="icone" />
-                    <a href="https://aitkhelifa.fatima59@gmail.com">
-                        <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
-                    <a href="https://github.com/fatimaatk">
-                        <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
-                    <a href="https://www.linkedin.com/in/fatima-ait-khelifa-4ab840215/">
-                        <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
-                </p>
+                <div class="wilder-reseaux-container-icones">
+                        <a href="https://aitkhelifa.fatima59@gmail.com" target="_blank">
+                            <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
+                        <a href="https://github.com/fatimaatk" target="_blank">
+                            <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
+                        <a href="https://www.linkedin.com/in/fatima-ait-khelifa-4ab840215/" target="_blank">
+                            <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
+                </div>
+                <h4>FATIMA AIT KHELIFA</h4>
             </div>
             <div class="wilder-reseaux">
-                <p>
-                    <img src="icones/gio-img.png" alt="Photo de giovanni" class="icone" />
-                    <a href="https://giovanni.rossi.web@gmail.com">
-                        <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
-                    <a href="https://github.com/eths09">
-                        <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
-                    <a href="https://www.linkedin.com/in/">
-                        <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
-                </p>
-
+                <div class="wilder-reseaux-container-icones">
+                        <a href="https://kevinbruno90@gmail.com" target="_blank">
+                            <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
+                        <a href="https://github.com/KvnBrn" target="_blank">
+                            <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
+                        <a href="https://www.linkedin.com/in/kevin-bruno-983a6417b/" target="_blank">
+                            <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
+                </div>            
+                <h4>KEVIN BRUNO</h4>
             </div>
             <div class="wilder-reseaux">
-                <p>
-                    <img src="icones/thomas-img.png" alt="Photo de Thomas" class="icone" />
-                    <a href="https://thomasfran1935@gmail.com">
-                        <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
-                    <a href="https://github.com/ThomasFr45">
-                        <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
-                    <a href="https://www.linkedin.com/in/">
-                        <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
-                </p>
+                <div class="wilder-reseaux-container-icones">
+                        <a href="https://thomasfran1935@gmail.com" target="_blank">
+                            <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
+                        <a href="https://github.com/ThomasFr45" target="_blank">
+                            <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
+                        <a href="https://www.linkedin.com/in/thomas-fran%C3%A7ois-bba91a221/" target="_blank">
+                            <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
+                </div>
+                <h4>THOMAS FRANÇOIS</h4>
             </div>
             <div class="wilder-reseaux">
-                <p>
-                    <img src="icones/kevin-img.png" alt="Photo de Kévin" class="icone" />
-                    <a href="https://kevinbruno90@gmail.com">
-                        <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
-                    <a href="https://https://github.com/KvnBrn">
-                        <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
-                    <a href="https://www.linkedin.com/in/kevin-bruno-983a6417b/">
-                        <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
-                </p>
-            </div>
+                <div class="wilder-reseaux-container-icones">
+                        <a href="https://giovanni.rossi.web@gmail.com" target="_blank">
+                            <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
+                        <a href="https://github.com/eths09" target="_blank">
+                            <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
+                         <a href="https://www.linkedin.com/in/gio-rossi-4b0b98221/" target="_blank">
+                            <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
+                </div>
+                <h4>GIOVANNI ROSSI</h4>
+             </div>
         </div>
-    </footer>
+        <div class="text-footer">
+            <p>Wilders ayant participé à l'élaboration de ce projet
+                </br>
+                Site internet créé dans le cadre d'un projet de la formation DEVELOPPEUR WEB et WEB MOBILE promo
+                2021-2022
+                </br>
+                Tous droits réservés à la WildCodeSchool
+            </p>
+        </div>
+    </div>
+</footer>
 </div>
 
 </html>
